syntax = "proto3";

package private_school;
option go_package = "private_school.v1";

import "google/protobuf/empty.proto";

service StudentGroupService {
  rpc AddStudentToGroup(AddStudentToGroupRequest) returns (google.protobuf.Empty);
  rpc RemoveStudentFromGroup(RemoveStudentFromGroupRequest) returns (google.protobuf.Empty);
  rpc ListStudentGroups(ListStudentGroupsRequest) returns (ListStudentGroupsResponse);
  rpc ListGroupStudents(ListGroupStudentsRequest) returns (ListGroupStudentsResponse);
}

message AddStudentToGroupRequest {
  string client_id = 1;
  string student_id = 2;
  string group_id = 3;
}

message RemoveStudentFromGroupRequest {
  string client_id = 1;
  string student_id = 2;
  string group_id = 3;
}

message ListStudentGroupsRequest {
  string client_id = 1;
  string student_id = 2;
}

message ListStudentGroupsResponse {
  repeated string group_ids = 1;
}

message ListGroupStudentsRequest {
  string client_id = 1;
  string group_id = 2;
}

message ListGroupStudentsResponse {
  repeated string student_ids = 1;
}